<resources>
    <string name="language">Language</string>
    <string name="choose_language">Choose language</string>
    <string name="language_english_default">English (Default)</string>
    <string name="language_tamil">Tamil</string>
    <string name="language_sinhala">Sinhala</string>
    <string name="language_changed">Language changed</string>
    <string name="app_name">Woil</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_chat">Chat</string>
    <string name="action_more">More</string>
    <string name="home_fab"/>
    <string name="profile_image_desc">Profile image</string>
    <string name="house_cleaner_needed">House Cleaner Needed</string>
    <string name="colombo_05">Colombo 05</string>
    <string name="status_pending">Status: PENDING</string>
    <string name="my_applications">My Applications</string>
    <string name="worker_name">Worker Name</string>
    <string name="rating_4_6">Rating: 4.6</string>
    <string name="completed_jobs_12">Completed jobs: 12</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="applications">Applications</string>
    <string name="job_house_cleaner_needed">Job: House Cleaner Needed</string>
    <string name="no_applications_yet">No applications yet</string>
    <string name="apply_job">Apply Job</string>
    <string name="confirm_job_application">Confirm Job Application</string>
    <string name="wage_rs_2_000_fixed">Wage: Rs. 2,000 fixed</string>
    <string name="time_apr_20_2026_09_00_am">Time: Apr 20, 2026 - 09:00 AM</string>
    <string name="location_colombo_05">Location: Colombo 05</string>
    <string name="your_application_will_be_sent_to_the_client_for_review">Your application will be sent to the client for review. The job will only be assigned after the client accepts.</string>
    <string name="confirm_apply">Confirm Apply</string>
    <string name="cancel">Cancel</string>
    <string name="post_a_job">Post a Job</string>
    <string name="job_title">   Job title</string>
    <string name="category">   Category</string>
    <string name="location">   Location</string>
    <string name="set_location">Set location</string>
    <string name="no_location_selected">No location selected</string>
    <string name="date_and_time">   Date and Time</string>
    <string name="apr_26_2024">  Apr 26, 2024</string>
    <string name="value_02_00_pm_04_30_pm">  02:00 PM - 04:30 PM</string>
    <string name="wage">   Wage</string>
    <string name="rs_1200_1800_hr">Rs. 1200 - 1800/hr</string>
    <string name="allow_offers">   Allow offers</string>
    <string name="job_description">Job description</string>
    <string name="post_job">Post Job</string>
    <string name="hint_e_g_cook_for_a_family">e.g. Cook for a family</string>
    <string name="hint_rs_1500">Rs. 1500</string>
    <string name="cd_job_icon">job icon</string>
    <string name="cd_map">map</string>
    <string name="set_up_your_profile">Set up your profile</string>
    <string name="profile_details">Profile Details</string>
    <string name="complete_your_details_to_continue">Complete your details to continue</string>
    <string name="basic_information">Basic Information</string>
    <string name="select_location_on_the_map">Select Location on the Map</string>
    <string name="verification_and_personal_info">Verification and Personal Info</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="skills_workers_only">Skills (Workers Only)</string>
    <string name="submit">Submit</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_nic_optional">NIC</string>
    <string name="hint_date_of_birth">Date of Birth</string>
    <string name="cd_woil_logo">Woil logo</string>
    <string name="cd_upload_nic">Upload NIC</string>
    <string name="verify_number">Verify Number</string>
    <string name="enter_the_otp_sent_to_your_mobile_number">Enter the OTP sent to your mobile number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_your_6_digit_verification_code">Enter your 6 digit verification code</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="didn_t_receive_otp">Didn\'t receive OTP? </string>
    <string name="resend">Resend</string>
    <string name="hint_enter_6_digit_code">Enter 6 digit code</string>
    <string name="workers_opportunity_and_inclusive_labor">Workers\' Opportunity and Inclusive Labor</string>
    <string name="create_account">Create account</string>
    <string name="sign_up_to_continue_with_woil">Sign up to continue with Woil</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="value_94">+94</string>
    <string name="i_want_to">I want to</string>
    <string name="hire_workers_client">Hire Workers (Client)</string>
    <string name="find_work_worker">Find Work (Worker)</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="login">Login</string>
    <string name="hint_enter_mobile_number">Enter mobile number</string>
    <string name="kavitha_kanthasawamy">Kavitha Kanthasawamy</string>
    <string name="worker">Worker</string>
    <string name="wage_lkr_2600">Wage
LKR 2600</string>
    <string name="done_12">Done
12</string>
    <string name="next_cleaning">Next
Cleaning</string>
    <string name="alerts_3">Alerts
3</string>
    <string name="job_alerts">Job Alerts</string>
    <string name="maid_work_near_jaffna">Maid work near Jaffna</string>
    <string name="rs_1800">Rs. 1800</string>
    <string name="call">Call</string>
    <string name="cleaning_near_colombo">Cleaning near Colombo</string>
    <string name="rs_1500">Rs. 1500</string>
    <string name="care_taker_near_colombo">Care taker near Colombo</string>
    <string name="rs_3500">Rs. 3500</string>
    <string name="calculator">Calculator</string>
    <string name="balance_rs_2600">Balance Rs. 2600</string>
    <string name="calculate">Calculate</string>
    <string name="woil_guard">Woil Guard</string>
    <string name="status_safe">Status: Safe</string>
    <string name="battery_82">Battery: 82%</string>
    <string name="incident_none">Incident: None</string>
    <string name="connected">Connected</string>
    <string name="video">Video</string>
    <string name="hint_hours">Hours</string>
    <string name="hint_distance">Distance</string>
    <string name="cd_profile">profile</string>
    <string name="cd_panic">panic</string>
    <string name="cd_phone">phone</string>
    <string name="cd_message">message</string>
    <string name="cd_video">video</string>
    <string name="smart_wage_calculator">Smart wage calculator</string>
    <string name="kavitha_dissanayake">Kavitha Dissanayake</string>
    <string name="empty">✓</string>
    <string name="worker_colombo_5">Worker • Colombo 5</string>
    <string name="rating_4_8">Rating 4.8</string>
    <string name="earned">Earned </string>
    <string name="rs_18_400">Rs. 18,400</string>
    <string name="pending">Pending </string>
    <string name="rs_3_200">Rs. 3,200</string>
    <string name="recent_wages">Recent wages</string>
    <string name="current_earning_progress">Current earning progress</string>
    <string name="earned_2">Earned</string>
    <string name="pending_2">Pending</string>
    <string name="target">Target</string>
    <string name="rs_25_000">Rs. 25,000</string>
    <string name="you_are_close_to_your_target">You are close to your target</string>
    <string name="recent_wage_history">Recent wage history</string>
    <string name="cleaning_rs_1_540_yesterday">Cleaning • Rs. 1,540 • Yesterday</string>
    <string name="laundry_rs_980_2_days_ago">Laundry • Rs. 980 • 2 days ago</string>
    <string name="gardening_rs_2_200_4_days_ago">Gardening • Rs. 2,200 • 4 days ago</string>
    <string name="wage_details">Wage details</string>
    <string name="job_category">Job category</string>
    <string name="tasks">Tasks</string>
    <string name="fast_cleaning">Fast cleaning</string>
    <string name="laundry">Laundry</string>
    <string name="nearby">Nearby</string>
    <string name="other">Other</string>
    <string name="distance_km">Distance (km)</string>
    <string name="duration">Duration</string>
    <string name="human_hours">Human hours</string>
    <string name="break_time">Break</string>
    <string name="tips">Tips</string>
    <string name="materials">Materials</string>
    <string name="market">Market</string>
    <string name="rs_1400_1800">Rs. 1400 - 1800</string>
    <string name="fair_rs_1650">Fair: Rs. 1650</string>
    <string name="within">WITHIN</string>
    <string name="breakdown">Breakdown</string>
    <string name="base">Base</string>
    <string name="rs_0">Rs. 0</string>
    <string name="extras">Extras</string>
    <string name="travel">Travel</string>
    <string name="total_wage">Total wage</string>
    <string name="send_offer">Send offer</string>
    <string name="hint_type_other_task">Type other task</string>
    <string name="hint_4_6">4.6</string>
    <string name="hint_3_h">3 h</string>
    <string name="hint_3">3</string>
    <string name="hint_15_min">15 min</string>
    <string name="hint_100">100</string>
    <string name="hint_0">0</string>
    <string name="cd_back">Back</string>
    <string name="cd_profile_2">Profile</string>
    <string name="ccc_case_summary">CCC case summary</string>
    <string name="acknowledge">Acknowledge</string>
    <string name="escalate">Escalate</string>
    <string name="close">Close</string>
    <string name="jobs">Jobs</string>
    <string name="loading">Loading...</string>
    <string name="no_jobs_found">No jobs found</string>
    <string name="job_title_2">Job title</string>
    <string name="rs_1200_hr">Rs. 1200/hr</string>
    <string name="colombo_5">Colombo 5</string>
    <string name="apr_26_2024_02_00_pm_04_30_pm">Apr 26, 2024 | 02:00 PM - 04:30 PM</string>
    <string name="message">Message</string>
    <string name="tap_to_choose_location">Tap to choose location</string>
    <string name="confirm">Confirm</string>
    <string name="ravi_senthilkumar">Ravi Senthilkumar</string>
    <string name="hint_type_a_message">Type a message</string>
    <string name="welcome_nlooking_for_a_job">Welcome 👋\nLooking for a Job?</string>
    <string name="your_job_to_do">Your Job to do</string>
    <string name="find_job">Find Job</string>
    <string name="cleaning">Cleaning</string>
    <string name="hi_ravi_yes_i_ll_be_available_from_2_pm_to_4_pm">Hi Ravi, Yes I’ll be available from 2 PM to 4 PM</string>
    <string name="value_2_12_pm">2:12 PM</string>
    <string name="value_9_30_am">9:30 AM</string>
    <string name="rangan_kumarasamy">Rangan Kumarasamy</string>
    <string name="point_pedro_jaffna">Point Pedro, Jaffna</string>
    <string name="repair_broken_downpipes">Repair broken downpipes</string>
    <string name="mopping_floor_demonstration">Mopping floor demonstration</string>
    <string name="kitchen_and_hall_floor_mopping_process">Kitchen and hall floor mopping process.</string>
    <string name="pending_4">PENDING</string>
    <string name="preview">Preview</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="active_job">Active Job</string>
    <string name="worker_is_on_the_job">Worker is on the job</string>
    <string name="estimated_remaining_1_hr_20_min">Estimated remaining: 1 hr 20 min</string>
    <string name="mark_job_complete">Mark Job Complete</string>
</resources>