<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/bg_orange_gradient">

        <ImageButton
            android:id="@+id/btn_back_arrow_settings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_alignParentStart="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:src="@drawable/ic_arrow_back"
            app:tint="@android:color/white" />

        <TextView
            android:id="@+id/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active_job"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_client_active_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/worker_is_on_the_job"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_client_active_time_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/estimated_remaining_1_hr_20_min"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_mark_complete"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="20dp"
            android:text="@string/mark_job_complete"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:backgroundTint="#FF8A00"
            app:cornerRadius="14dp" />
    </LinearLayout>
</FrameLayout>